# grafana-poc

./: setup.sh
app/: pyproject.toml
app/app/: Dockerfile  api.py  requirements.txt
graf-core/: secret.yaml  values-old.yaml  values.yaml
graf-core-v1/: values.yaml
helm/: values.yaml
loki/: values.yaml
openobserve/: values.yaml
tempo/: values.yaml
victoria-logs-v1/: Chart.yaml  values.yaml
victoria-logs-v1/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
victoria-logs-v1/templates/tests/: test-connection.yaml
victoria-v1/: Chart.yaml  values.yaml
victoria-v1/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
victoria-v1/templates/tests/: test-connection.yaml
victoria/vl/: values.yaml
victoria/vm/: values.yaml
