[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Louis Dutoit <louis.dutoitld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
fastapi = "^0.115.5"
opentelemetry-api = "^1.28.2"
python-json-logger = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
